--- a/uasdm-ui/src/app/site/component/modal/product-modal.component.html
+++ b/uasdm-ui/src/app/site/component/modal/product-modal.component.html
@@ -36,8 +36,8 @@
       <div class="row">
         <div class="col-md-12">
           <div class="" *ngIf="thumbnails[product.id] != null">
-            <a class="thumbnail non-clickable">
-              <img class="" [src]="thumbnails[product.id] | safeHtml" (error)="getDefaultImgURL($event)" alt="Image">
+            <a class="thumbnail" (click)="viewOrtho()" title="View ortho">
+              <img [src]="thumbnails[product.id] | safeHtml" (error)="getDefaultImgURL($event)" alt="Image">
             </a>
           </div>
         </div>
